--- a/docs/webauthn/webauthn.mdx
+++ b/docs/webauthn/webauthn.mdx
@@ -17,7 +17,7 @@ import Mobilefido2 from "./assets/mobilefido2.png";
 :::tip
 **Please Note:**
 
-We've provided an <a href="/devportal/demo/?tab=fidowebauthn" target="_blank"> example application</a> where users can test webauthn functionality. Users can register a FIDO device, and then use that device to authenticate. 
+We've provided an <a href="/devportal/demo/?tab=fidowebauthn" target="_blank"> example demo application</a> where users can test webauthn functionality. Users can register a FIDO device, and then use that device to authenticate. 
 :::
 
 <br />
