--- a/docs/webauthn/webauthn-authentication.mdx
+++ b/docs/webauthn/webauthn-authentication.mdx
@@ -12,12 +12,6 @@ import BrowserWindow from "@site/src/components/BrowserWindow";
 
 
 
-:::tip
-Trials for WebAuthn are coming soon. Please contact developer@1kosmos.com for API details
-:::
-
-
-
 Users can authenticate login requests and other requests using a registered FIDO device.  
 
 ## **Authentication Options**
@@ -28,7 +22,7 @@ Some basic user account and tenant information is needed to register a device. T
 ### Parameters
 
 - `username`: Registered username
-- `dns`: Tenant DNS
+- `dns`: Current domain as used in your browser, such as `localhost`
 - `displayName`: Username to display 
 
 ### Request Format
@@ -39,7 +33,7 @@ Some basic user account and tenant information is needed to register a device. T
 {
     "displayName":"<displayname>",
     "username":"<username>",
-    "dns":"<tenant DNS>",
+    "dns":"<current domain>",
 }
 ```
 
@@ -53,7 +47,7 @@ We've provided an example request showing the authentications options flow.
 {
     "displayName":"john.doe",
     "username":"john.doe@company.com",
-    "dns":"developer.1kosmos.com",
+    "dns":"localhost",
 }
 ```
 
@@ -116,7 +110,7 @@ Once the device authentication options have been returned you have the necessary
 		"getClientExtensionResults": {},			
 		"id": "<authentication result id>",								
 		"type": "<public-key>",																	
-		"dns": "<tenant DNS>"							
+		"dns": "<current domain>"							
 	}
 ```
 
@@ -137,7 +131,7 @@ We've provided an example authentication result request:
             "getClientExtensionResults":{},
             "id":"AdsogLw0q2c2BZI5a9G0_qqSUxMa-baLSd7moAtEFJWlD8_NGRD_hPHnqcCGoBV-dyPe3MG_cFyF5AraYTSuMNLSDuELyFpJaM_4uQ5C0DYEav8rAw",
             "type":"public-key"
-            "dns":"developer.1kosmos.com",
+            "dns":"localhost",
 }
 ```
 
