--- a/docs/webauthn/webauthn-demo.mdx
+++ b/docs/webauthn/webauthn-demo.mdx
@@ -88,16 +88,16 @@ We are going to authenticate using our MacBook, which we registered with the use
 
 <img src={Authenticate} height="250" />
 
-After entering your username, click the *Login with fido key* button. 
-
-A browser message will pop up again, asking you to authenticate the FIDO device. 
+After entering your username, click the *Login with fido key* button. A browser message will pop up again, asking you to authenticate the FIDO device. 
 
 This will be identical to the process used when registering the device: 
 
+##### Security Keys
 For *security keys*, such as a YubiKey, you will see the message asking you to insert your key and touch the device: 
 
 <img src={RegisterKey2} height="250" />
 
+##### Platform Authenticators
 For *platform authenticators*, such as Apple TouchID on a Macbook Pro, you will see the message asking you to scan your fingerprint (or else type in a password): 
 
 <img src={RegisterPlatformAuthenticator2} height="250" />
