--- a/docs/webauthn/webauthn-demo.mdx
+++ b/docs/webauthn/webauthn-demo.mdx
@@ -17,7 +17,7 @@ import Success from "./assets/webauthndemo7.jpg";
 
 # WebAuthn Demo Application
 
-We've created a demo application using the <a href="/webauthn/nodejs-example" target="_blank">BlockID NodeJS SDK</a> and ReactJS.  
+We've created a <a href="/devportal/demo/?tab=fidowebauthn" target="_blank">webauthn demo application</a> using the BlockID NodeJS SDK and ReactJS. 
 
 <BrowserWindow url="https://developer.1kosmos.com/devportal/demo/?tab=fidowebauthn">
   <img src={DemoWindow} alt="WebAuthn Demo" />
